# vistats

./: README.md  pyproject.toml
examples/: barplot_example.ipynb  scipy_connect_example.ipynb
examples/data/: time_to_threshold_4_picknplace_data.csv
examples/data/pinball/: time_to_threshold_1000.csv
vistats/: __init__.py  core.py  test_core.py  util.py
